--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <footer>
       <p>
-        Para mais informações, entre em contato conosco em exemplo@email.com.
+        Para mais informações, entre em contato conosco em matheuschiodi20@gmail.com.
       </p>
     </footer>
   </body>
