--- a/index.html
+++ b/index.html
@@ -3,71 +3,122 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Política de Privacidade do Nosso Site - Proteção de Dados Pessoais"
+    />
     <title>Política de Privacidade</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+      header {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 1rem 0;
+      }
+
+      main {
+        padding: 2rem;
+      }
+
+      section {
+        margin-bottom: 2rem;
+      }
+
+      h1,
+      h2 {
+        color: #333;
+      }
+
+      footer {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 1rem 0;
+      }
+    </style>
   </head>
   <body>
     <header>
       <h1>Política de Privacidade</h1>
     </header>
-
     <main>
       <section>
         <h2>Coleta de Informações Pessoais</h2>
         <p>
-          Nós coletamos informações pessoais, como nome e email, quando você se
-          cadastra em nosso site.
+          Nós valorizamos sua privacidade e estamos comprometidos em proteger
+          suas informações pessoais. Coletamos informações como nome e endereço
+          de e-mail somente quando você decide se cadastrar voluntariamente em
+          nosso site. Suas informações são armazenadas de maneira segura e não
+          serão vendidas ou compartilhadas com terceiros sem o seu consentimento
+          explícito. Ao fornecer seus dados, você concorda com nossa política de
+          privacidade.
         </p>
       </section>
 
       <section>
         <h2>Uso de Informações Pessoais</h2>
         <p>
-          As informações coletadas serão utilizadas para enviar atualizações e
-          conteúdo relevante a você.
+          As informações coletadas são utilizadas para personalizar sua
+          experiência em nosso site, enviar atualizações relevantes e conteúdo
+          que possa ser do seu interesse. O objetivo é melhorar sua interação
+          conosco e oferecer um serviço mais adequado às suas preferências.
         </p>
       </section>
 
       <section>
         <h2>Compartilhamento de Informações</h2>
         <p>
-          Nós não compartilhamos suas informações pessoais com terceiros. Suas
-          informações estão seguras conosco.
+          Sua privacidade é uma prioridade para nós. Não compartilhamos suas
+          informações pessoais com terceiros, a menos que seja estritamente
+          necessário para fornecer um serviço que você tenha solicitado, ou
+          quando exigido por lei. Estamos empenhados em manter a
+          confidencialidade e a segurança de seus dados.
         </p>
       </section>
 
       <section>
         <h2>Cookies</h2>
         <p>
-          Utilizamos cookies para melhorar a experiência do usuário em nosso
-          site.
+          Utilizamos cookies para aprimorar sua experiência em nosso site.
+          Cookies são pequenos arquivos de texto que são armazenados em seu
+          dispositivo quando você visita nossa página. Eles nos permitem
+          reconhecer suas preferências e oferecer um site mais personalizado.
+          Você pode configurar seu navegador para recusar cookies, mas isso pode
+          afetar a funcionalidade do site. Ao continuar a utilizar nosso site,
+          você concorda com o uso de cookies.
         </p>
       </section>
 
       <section>
         <h2>Anúncios de Terceiros</h2>
         <p>
-          O nosso aplicativo pode exibir anúncios de terceiros. Esses anúncios
-          podem utilizar cookies e outras tecnologias para coletar informações
-          sobre as suas atividades, a fim de exibir anúncios relevantes para os
-          seus interesses.
+          Nosso site pode exibir anúncios de parceiros terceirizados. Esses
+          anúncios podem utilizar cookies e outras tecnologias para coletar
+          informações sobre suas atividades na web, a fim de exibir anúncios
+          relevantes com base em seus interesses. Esses anúncios são fornecidos
+          por empresas de publicidade terceirizadas e podem coletar dados como
+          endereço IP, identificador único do dispositivo, navegador, sistema
+          operacional e geolocalização, se permitido.
         </p>
         <p>
-          Esses anúncios são fornecidos por empresas de publicidade
-          terceirizadas e podem coletar dados como o seu endereço IP,
-          identificador único do dispositivo, tipo de navegador, sistema
-          operacional e dados de geolocalização, se permitido.
-        </p>
-        <p>
-          Recomendamos que você consulte as políticas de privacidade dessas
-          empresas de publicidade para obter mais informações sobre como eles
-          lidam com os dados dos usuários.
+          É importante observar que não temos controle sobre as práticas de
+          privacidade dessas empresas de publicidade terceirizadas. Recomendamos
+          que você consulte as políticas de privacidade dessas empresas para
+          entender como elas lidam com seus dados.
         </p>
       </section>
     </main>
-
     <footer>
       <p>
-        Para mais informações, entre em contato conosco em matheuschiodi20@gmail.com.
+        Para mais informações sobre nossa política de privacidade, entre em
+        contato conosco através do e-mail
+        <a href="mailto:matheuschiodi20@gmail.com">matheuschiodi20@gmail.com</a
+        >.
       </p>
     </footer>
   </body>
