--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
         margin-bottom: 2rem;
       }
 
-      h1,
+      h1{
+        color: #fff;
+        font-weight: 400;
+      }
+
       h2 {
         color: #333;
+      }
+
+      a {
+        color: #fff;
       }
 
       footer {
