--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Política de Privacidade do Nosso Site - Proteção de Dados Pessoais"
+      content="Política de Privacidade"
     />
     <title>Política de Privacidade</title>
     <style>
@@ -61,7 +61,7 @@
           Nós valorizamos sua privacidade e estamos comprometidos em proteger
           suas informações pessoais. Coletamos informações como nome e endereço
           de e-mail somente quando você decide se cadastrar voluntariamente em
-          nosso site. Suas informações são armazenadas de maneira segura e não
+          nosso aplicativo. Suas informações são armazenadas de maneira segura e não
           serão vendidas ou compartilhadas com terceiros sem o seu consentimento
           explícito. Ao fornecer seus dados, você concorda com nossa política de
           privacidade.
@@ -72,7 +72,7 @@
         <h2>Uso de Informações Pessoais</h2>
         <p>
           As informações coletadas são utilizadas para personalizar sua
-          experiência em nosso site, enviar atualizações relevantes e conteúdo
+          experiência em nosso aplicativo, enviar atualizações relevantes e conteúdo
           que possa ser do seu interesse. O objetivo é melhorar sua interação
           conosco e oferecer um serviço mais adequado às suas preferências.
         </p>
@@ -92,12 +92,12 @@
       <section>
         <h2>Cookies</h2>
         <p>
-          Utilizamos cookies para aprimorar sua experiência em nosso site.
+          Utilizamos cookies para aprimorar sua experiência em nosso aplicativo.
           Cookies são pequenos arquivos de texto que são armazenados em seu
           dispositivo quando você visita nossa página. Eles nos permitem
-          reconhecer suas preferências e oferecer um site mais personalizado.
+          reconhecer suas preferências e oferecer um aplicativo mais personalizado.
           Você pode configurar seu navegador para recusar cookies, mas isso pode
-          afetar a funcionalidade do site. Ao continuar a utilizar nosso site,
+          afetar a funcionalidade do aplicativo. Ao continuar a utilizar nosso aplicativo,
           você concorda com o uso de cookies.
         </p>
       </section>
@@ -105,7 +105,7 @@
       <section>
         <h2>Anúncios de Terceiros</h2>
         <p>
-          Nosso site pode exibir anúncios de parceiros terceirizados. Esses
+          Nosso aplicativo pode exibir anúncios de parceiros terceirizados. Esses
           anúncios podem utilizar cookies e outras tecnologias para coletar
           informações sobre suas atividades na web, a fim de exibir anúncios
           relevantes com base em seus interesses. Esses anúncios são fornecidos
