--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
       name="description"
       content="Política de Privacidade"
     />
+    <meta
+      name="keywords"
+      content="Política de Privacidade"
+    />
+    <meta name="author" content="Matheus Chiodi" />
+    <meta name="robots" content="index, follow" />
+    <link href="logo.png" rel="shortcut icon">
     <title>Política de Privacidade</title>
     <style>
       body {
