--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Política de Privacidade"
-    />
-    <meta
-      name="keywords"
-      content="Política de Privacidade"
-    />
+    <meta name="description" content="Política de Privacidade" />
+    <meta name="keywords" content="Política de Privacidade" />
     <meta name="author" content="Matheus Chiodi" />
     <meta name="robots" content="index, follow" />
-    <link href="logo.png" rel="shortcut icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="logo.png" rel="shortcut icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
     <title>Política de Privacidade</title>
     <style>
       body {
@@ -37,7 +36,7 @@
         margin-bottom: 2rem;
       }
 
-      h1{
+      h1 {
         color: #f8f8f2;
         font-weight: 400;
       }
@@ -64,94 +63,111 @@
     </header>
     <main>
       <section>
-        <h2>Coleta de Informações Pessoais</h2>
+        <h2>📱 Sobre</h2>
         <p>
-          Nossa maior prioridade é respeitar e salvaguardar a sua privacidade. Reconhecemos a importância das suas informações pessoais e estamos totalmente empenhados em assegurar que elas sejam tratadas com o máximo cuidado e proteção.
+          Esta Política de Privacidade aplica-se a todos os aplicativos
+          desenvolvidos por MChiodi. Meu compromisso é respeitar e proteger a
+          privacidade de meus usuários e assegurar a conformidade com as
+          diretrizes do Google Play.
         </p>
         <p>
-          Ao utilizar nosso aplicativo, você pode ter a certeza de que suas informações estão em boas mãos. Para garantir que possamos oferecer a você a melhor experiência possível, coletamos certos detalhes, como seu nome e endereço de e-mail. No entanto, é importante ressaltar que essa coleta de informações só ocorre quando você decide se cadastrar voluntariamente em nossa plataforma. Dessa forma, você mantém o controle total sobre quais informações compartilha conosco.
+          É importante destacar que todos os aplicativos desenvolvidos por
+          MChiodi são projetados com um firme compromisso com a privacidade dos
+          usuários. Meus aplicativos não coletam nenhum tipo de dado pessoal.
+          Assim, quaisquer informações inseridas pelo usuário são exclusivamente
+          armazenadas no dispositivo do usuário. Esta abordagem garante que o
+          acesso a esses dados seja tecnicamente impossível por parte de
+          terceiros, reforçando a minha dedicação à proteção e à
+          confidencialidade das informações dos usuários.
+        </p>
+      </section>
+      <section>
+        <h2>🔒 Armazenamento e Uso de Dados</h2>
+        <p>
+          Os usuários têm total liberdade para inserir ou não os dados, sejam
+          eles reais ou fictícios, de acordo com a finalidade de uso do
+          aplicativo. Essa flexibilidade é fundamental para garantir uma
+          experiência personalizada e segura.
         </p>
         <p>
-          A segurança dos seus dados é de extrema importância para nós. Implementamos medidas rigorosas de segurança para garantir que suas informações pessoais sejam armazenadas de maneira segura e protegida contra acessos não autorizados. Jamais comprometeremos a sua confiança vendendo ou compartilhando suas informações com terceiros sem a sua permissão expressa.
-        </p>
-          Valorizamos a transparência em nossa relação com você. Queremos que você saiba que, ao fornecer seus dados, você está aceitando e concordando com nossa política de privacidade. Esta política é um compromisso que fazemos para manter você informado sobre como suas informações serão coletadas, usadas e protegidas.
-        <p>
-          Estamos à disposição para esclarecer qualquer dúvida que você possa ter em relação à nossa política de privacidade. Seja bem-vindo a entrar em contato conosco a qualquer momento. Sua confiança é essencial, e estamos empenhados em manter essa relação de respeito e transparência em relação à sua privacidade.
+          Todos os dados inseridos são armazenados no dispositivo do usuário.
+          Esta abordagem assegura que a privacidade e a integridade dos dados
+          sejam mantidas, já que eles não são transmitidos para servidores
+          externos nem acessíveis por nossa equipe.
         </p>
       </section>
 
       <section>
-        <h2>Uso de Informações Pessoais</h2>
+        <h2>🛡️ Privacidade e Segurança</h2>
         <p>
-          As informações que coletamos desempenham um papel fundamental em enriquecer a sua jornada dentro do nosso aplicativo. Utilizamos esses dados de forma estratégica para personalizar cada detalhe da sua experiência, proporcionando um ambiente que se alinha diretamente com os seus gostos e necessidades.
+          Os dados inseridos nos aplicativos são tratados com a máxima
+          confidencialidade. Sem a possibilidade de acesso externo, a
+          privacidade do usuário é sempre preservada.
         </p>
         <p>
-          Queremos que a sua interação conosco seja excepcional. É por isso que empregamos as informações coletadas para enviar a você atualizações relevantes e conteúdo especialmente selecionado, que se alinham ao seu perfil e interesses. Acreditamos que essa abordagem contribui para tornar sua experiência mais rica e envolvente, ampliando o valor que você obtém de nosso aplicativo.
-        </p>
-        <p>
-          A customização é a chave para oferecer um serviço que ressoa com suas preferências individuais. Ao entender melhor quem você é e o que procura, conseguimos ajustar nossa plataforma de maneira que se torne mais adequada e valiosa para você. Queremos que cada momento que você passe em nosso aplicativo seja relevante e gratificante, e é por isso que nos esforçamos para usar as informações que você compartilha para aprimorar constantemente o que oferecemos.
-        </p>
-      </section>
-
-      <section>
-        <h2>Compartilhamento de Informações</h2>
-        <p>
-          A proteção da sua privacidade é uma das nossas principais e inabaláveis preocupações. Garantimos a você que suas informações pessoais são tratadas com um nível intransigente de respeito e responsabilidade. Em momento algum compartilhamos esses dados valiosos com terceiros, exceto quando absolutamente necessário para executar um serviço que você expressamente solicitou. Isso pode incluir circunstâncias em que a colaboração com parceiros seja essencial para atender às suas necessidades ou quando a legislação assim o exigir.
-        </p>
-        <p>
-          Reafirmamos nosso compromisso com a confidencialidade e a segurança dos dados que você nos confia. Empregamos uma abordagem meticulosa e abrangente para garantir que suas informações estejam completamente protegidas. Nossa infraestrutura de segurança é projetada para superar os mais altos padrões da indústria, visando manter qualquer acesso não autorizado rigorosamente afastado.
-        </p>
-        <p>
-          Comprometemo-nos a sempre buscar as melhores práticas de proteção de dados, garantindo que suas informações estejam salvaguardadas de acordo com os regulamentos e as normas vigentes. Afinal, consideramos que a confiança que você deposita em nós é preciosa e, por isso, tratamos suas informações com o mesmo cuidado que gostaríamos para as nossas próprias.
-        </p>
-        <p>
-          Esta declaração de compromisso não é apenas um discurso, mas a base que sustenta nossa conduta no tocante à privacidade. E você, enquanto usuário valioso, merece e deve esperar que assim seja. Estamos aqui para responder às suas perguntas e garantir que você compreenda plenamente como suas informações são tratadas. Sinta-se à vontade para entrar em contato conosco a qualquer momento para discutir suas preocupações ou dúvidas sobre a sua privacidade e a maneira como a protegemos.
+          A segurança dos dados armazenados depende das medidas de proteção do
+          dispositivo do usuário. Encorajo os usuários a manterem seus
+          dispositivos seguros para garantir a proteção integral de seus dados.
         </p>
       </section>
 
       <section>
-        <h2>Cookies</h2>
+        <h2>📵 Funcionalidade Offline</h2>
         <p>
-          A incorporação de cookies é uma estratégia que adotamos para elevar a qualidade da sua jornada dentro do nosso aplicativo. Desejamos proporcionar a você uma experiência sob medida, e os cookies desempenham um papel essencial nesse processo. Em termos simples, cookies são pequenos arquivos de texto que são alojados no seu dispositivo toda vez que você interage com nossa página. Eles têm uma função poderosa: permitir-nos identificar suas preferências e moldar o aplicativo de acordo com suas necessidades individuais.
+          Projetados para funcionar integralmente offline, meus aplicativos
+          garantem que os usuários mantenham sua privacidade e autonomia sem
+          depender de uma conexão com a internet.
         </p>
         <p>
-          Nossa utilização de cookies se traduz em uma experiência mais personalizada para você. Cada clique, cada escolha que você faz é analisado e considerado, o que nos possibilita aprimorar a forma como entregamos o conteúdo e os recursos que você valoriza. Afinal, entendemos que você é único, e os cookies nos permitem atender a essa singularidade de maneira eficaz.
-        </p>
-        <p>
-          Reconhecemos que a privacidade é uma preocupação constante. É importante ressaltar que os cookies não comprometem suas informações pessoais. Eles trabalham com as preferências e os padrões de navegação que você manifesta enquanto está em nosso aplicativo. No entanto, queremos que você saiba que tem total controle sobre esse aspecto. Se desejar, você pode ajustar as configurações do seu navegador para rejeitar cookies. Entretanto, é fundamental estar ciente de que essa escolha pode impactar a funcionalidade do aplicativo, limitando a experiência que oferecemos.
-        </p>
-        <p>
-          Por fim, queremos assegurar que a utilização de cookies está em total alinhamento com sua opção contínua de usar nosso aplicativo. Sua interação contínua indica seu consentimento para esse uso. Estamos comprometidos em manter a transparência em nossa relação, então, se você tiver qualquer dúvida ou desejar obter mais informações sobre nossa política de cookies, por favor, não hesite em nos contatar. Estamos aqui para garantir que você compreenda plenamente como os cookies funcionam e como eles são uma parte valiosa da sua experiência em nosso aplicativo.
+          A funcionalidade offline também permite que os usuários utilizem os
+          aplicativos em qualquer lugar, a qualquer momento, sem restrições de
+          acesso.
         </p>
       </section>
 
       <section>
-        <h2>Anúncios de Terceiros</h2>
+        <h2>👤 Controle do Usuário</h2>
         <p>
-          Queremos informar com total transparência que nosso aplicativo pode exibir anúncios provenientes de parceiros terceirizados. Essa colaboração é parte integrante da nossa plataforma e visa fornecer uma experiência diversificada e enriquecedora para você, nosso usuário valioso. No entanto, é crucial que você esteja ciente de como essa dinâmica funciona e de como suas informações podem ser utilizadas.
+          O usuário tem total controle sobre os dados inseridos. Esta abordagem
+          reforça a importância da responsabilidade do usuário quanto à
+          veracidade e à relevância dos dados inseridos, sejam eles reais ou
+          fictícios.
         </p>
+      </section>
+
+      <section>
+        <h2>📜 Compromisso com a Privacidade</h2>
         <p>
-          Os anúncios veiculados por nossos parceiros terceirizados podem fazer uso de tecnologias como cookies, entre outras, para coletar dados referentes às suas atividades online. Essa coleta de informações é realizada com o objetivo de personalizar os anúncios exibidos, de forma que eles estejam diretamente relacionados aos seus interesses e preferências. Em outras palavras, buscamos tornar cada interação que você tem com os anúncios uma experiência mais significativa e relevante para você.
+          Reafirmo meu compromisso em não coletar, armazenar ou
+          compartilhar dados pessoais dos usuários. A proteção da privacidade
+          dos usuários é um princípio fundamental em todos os meus
+          aplicativos.
         </p>
+      </section>
+
+      <section>
+        <h2>🖼️ Uso de Anúncios em Aplicativos</h2>
         <p>
-          É importante compreender que esses anúncios são providos por empresas de publicidade terceirizadas, que têm suas próprias políticas de privacidade. Não possuímos controle direto sobre as práticas de privacidade dessas empresas. Sugerimos veementemente que você consulte as políticas de privacidade dessas entidades para obter um entendimento claro de como elas tratam os dados coletados. Isso lhe permitirá tomar decisões informadas sobre como você deseja interagir com esses anúncios e como eles podem impactar sua privacidade.
-        </p>
-        <p>
-          Os tipos de informações que podem ser coletadas incluem, mas não estão limitados a, endereço IP, identificador único do dispositivo, detalhes do navegador, sistema operacional e até mesmo geolocalização, caso você tenha autorizado tal acesso.
-        </p>
-        <p>
-          Nós levamos a proteção de suas informações a sério e estamos empenhados em oferecer a você escolhas claras e informadas. Se você tiver alguma pergunta adicional sobre como os anúncios de parceiros terceirizados afetam sua privacidade ou se desejar mais detalhes, sinta-se à vontade para entrar em contato conosco. Estamos aqui para garantir que você tenha total conhecimento das práticas relacionadas a esses anúncios e possa tomar decisões bem fundamentadas em relação à sua privacidade.
+          Alguns de meus aplicativos podem ou não conter anúncios. Estes são usados
+          para suportar meus esforços de desenvolvimento e oferecer
+          aplicativos gratuitos. Ressalto que a presença de anúncios é
+          definida por aplicativo e será claramente indicada dentro de cada
+          aplicativo específico.
         </p>
       </section>
     </main>
     <footer>
       <p>
-        Para mais informações sobre nossa política de privacidade, entre em
-        contato conosco através do e-mail
+        Para mais informações sobre minha política de privacidade, entre em
+        contato comigo através do e-mail
         <a href="mailto:mchiodidev@gmail.com">mchiodidev@gmail.com</a>.
       </p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
